more tests on size

--- a/package.yaml
+++ b/package.yaml
@@ -63,6 +63,8 @@ tests:
     dependencies:
     - stm-trie
     - hspec
+    - hspec-hedgehog
+    - hedgehog
     - QuickCheck
     - containers
     build-tools:
