--- a/package.yaml
+++ b/package.yaml
@@ -38,7 +38,7 @@ ghc-options:
 - -Wpartial-fields
 - -Wredundant-constraints
 
-default-language: GHC2021
+default-language: Haskell2010
 
 default-extensions:
   - DataKinds
@@ -47,6 +47,7 @@ default-extensions:
   - TypeFamilies
   - TypeApplications
   - BlockArguments
+  - RankNTypes
 
 library:
   source-dirs: src
